# models/user.js
@@ -35,6 +35,7 @@ const userSchema = new Schema(
       type: Boolean,
       default: false,
     },
+    refreshToken: String,
   },
   {
     timestamps: true,
